# audiotags

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  plugin_tool.py  pubspec.yaml
.github/workflows/: ci.yml  deploy.yml  publish.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
audiotags/: .pubignore  pubspec.yaml
audiotags/example/: pubspec.yaml
audiotags/lib/: audiotags.dart
audiotags/linux/: CMakeLists.txt  audiotags_plugin.cc
audiotags/macos/: audiotags.podspec
audiotags/windows/: audiotags_plugin.cpp  audiotags_plugin_c_api.cpp
cli/: cli_command.dart
cli/commands/: codegen.dart  publish.dart  update.dart
cli/mixins/: cli_logger.dart  package_info.dart  process_runner.dart
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
ios/: audiotags.podspec  id3tags.podspec
lib/: audiotags.dart  bridge_generated.io.dart  id3tags.dart  id3tags_method_channel.dart  id3tags_platform_interface.dart
linux/: CMakeLists.txt  id3tags_plugin.cc
macos/: audiotags.podspec  id3tags.podspec
native/: Cargo.toml
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  error.rs  frb_generated.rs  id3.rs  lib.rs  mp4.rs  picture.rs  tag.rs
rust/src/api/: api.rs  tag.rs
rust_builder/: pubspec.yaml
test/: id3tags_method_channel_test.dart  id3tags_test.dart
windows/: CMakeLists.txt  audiotags_plugin.h  id3tags_plugin.cpp  id3tags_plugin.h  id3tags_plugin_c_api.cpp
(+90 files in other folders)
