[package]
name = "audiotags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.68"
flutter_rust_bridge = "1.57.0"
lofty = "0.11.0"
mp4ameta = "0.11.0"

[profile.release]
lto = true